@@ -96,6 +96,6 @@ public class LambdaExpressionImpl extends PyTree implements LambdaExpression {
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(lambdaKeyword, parameterList, colonToken, body).filter(Objects::nonNull).collect(Collectors.toList());
+    return Stream.of(lambdaKeyword, parameterList, colonToken, body).filter(Objects::nonNull).toList();
   }
 }
