@@ -104,6 +104,6 @@ public class ParameterImpl extends PyTree implements Parameter {
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(starToken, name, annotation, equalToken, defaultValue).filter(Objects::nonNull).collect(Collectors.toList());
+    return Stream.of(starToken, name, annotation, equalToken, defaultValue).filter(Objects::nonNull).toList();
   }
 }
