@@ -73,7 +73,7 @@ public class UnaryExpressionImpl extends PyTree implements UnaryExpression {
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(operator, expression).filter(Objects::nonNull).collect(Collectors.toList());
+    return Stream.of(operator, expression).filter(Objects::nonNull).toList();
   }
 
   @Override
